# Pear

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
pear/: __init__.py  pear.py  styles.py  utils.py
pear/persistence/: archive.py  base.py  config.py
pear/utils/: functions.py
