[project]
name = "pear-cli"
description = "An application to save and administrate the series, movies and documentaries you want to watch later"
version = "0.0.8"
authors = [
    { name = "Gerardo Castillo", email = "gcastillo.m14@gmail.com" }
]
packages = [
    { include = "pear" }
] 
dependencies = [
    "typer[all]",
    "rich"
]
keywords = ["pear", "cli"]

[project.urls]
documentation = "https://github.com/GerarC/Pear"
repository = "https://github.com/GerarC/Pear"
homepage = "https://github.com/GerarC/Pear"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
pear = "pear.pear:main"
